--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "crypto-js": "^3.1.9-1",
+    "express": "^4.17.1",
     "mongoose": "^5.5.2",
     "multer": "^1.4.1",
+    "passport-publickey": "^1.0.4",
     "socket.io": "^2.2.0",
     "yarn": "^1.16.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.19.1"
   }
 }
